# Personal_Helper_GUI

./: README.md  pyproject.toml
app/: main.py
app/calculator/: main.py
app/main_menu/: main.py  services.py
app/water_balance/: water_balance.py
app/weather/: main.py  weather_api.py
